--- a/Carekhun Application/sample/build.gradle
+++ b/Carekhun Application/sample/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "co.app.carekhun"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -68,6 +68,7 @@ dependencies {
     compile('me.dm7.barcodescanner:zxing:1.8.4'){
         exclude group: 'com.google.zxing'
     }
+    compile 'com.zekapp.library:progreswheelview:1.1.2'
 
 }
 apply plugin: 'com.google.gms.google-services'
